--- a/admin.html
+++ b/admin.html
@@ -81,7 +81,7 @@
   <script>
     (function(){
       // Replace these with your real operator IDs
-      const ALLOWED_IDS = ['device-LOOK-HERE-IM-AN-ADMIN-IM-BETTER-THAN-YOU',];
+      const ALLOWED_IDS = ['device-LOOK-HERE-IM-AN-ADMIN-IM-BETTER-THAN-YOU','device-dofbybi8',];
 
       const BALANCE_KEY = 'slotsBalance';
       const statusEl = document.getElementById('status');
@@ -163,4 +163,5 @@
     })();
   </script>
 </body>
+
 </html>
