--- a/admin.html
+++ b/admin.html
@@ -81,7 +81,7 @@
   <script>
     (function(){
       // Replace these with your real operator IDs
-      const ALLOWED_IDS = ['device-LOOK-HERE-IM-AN-ADMIN-IM-BETTER-THAN-YOU','device-dofbybi8',''];
+      const ALLOWED_IDS = ['device-LOOK-HERE-IM-AN-ADMIN-IM-BETTER-THAN-YOU','device-dofbybi8','device-ul5qv0ul'];
 
       const BALANCE_KEY = 'slotsBalance';
       const statusEl = document.getElementById('status');
@@ -165,4 +165,5 @@
 </body>
 
 </html>
+
 
