Add new operator ID to admin panel

--- a/admin.html
+++ b/admin.html
@@ -81,7 +81,7 @@
   <script>
     (function(){
       // Replace these with your real operator IDs
-      const ALLOWED_IDS = ['device-LOOK-HERE-IM-AN-ADMIN-IM-BETTER-THAN-YOU','device-dofbybi8','device-ul5qv0ul'];
+      const ALLOWED_IDS = ['device-LOOK-HERE-IM-AN-ADMIN-IM-BETTER-THAN-YOU','device-dofbybi8','device-ul5qv0ul','6767676767'];
 
       const BALANCE_KEY = 'slotsBalance';
       const statusEl = document.getElementById('status');
@@ -165,5 +165,6 @@
 </body>
 
 </html>
+
 
 
