Fix user ID handling in login script
Updated the login page to handle unknown user IDs.

--- a/index.html
+++ b/index.html
@@ -86,7 +86,7 @@
     if (existing) {
       try {
         const obj = JSON.parse(existing);
-        if (!obj.id) {
+        if (!obj.id || obj.id === 'unknown') {
           obj.id = generateId();
           setCookie('localaccount', JSON.stringify(obj));
         }
