--- a/admin.html
+++ b/admin.html
@@ -2,131 +2,147 @@
 <html lang="en">
 <head>
   <meta charset="utf-8" />
-  <title>Login</title>
+  <title>Admin Panel</title>
   <meta name="viewport" content="width=device-width,initial-scale=1" />
   <style>
     body {
       margin: 0;
-      padding: 0;
-      font-family: sans-serif;
-      background: #021018;
+      background: #021a30;
       color: #cfefff;
+      font-family: Segoe UI, Roboto, system-ui, sans-serif;
       display: flex;
-      justify-content: center;
       align-items: center;
+      justify-content: center;
       height: 100vh;
     }
-    .box {
-      background: #031a2a;
-      padding: 24px;
+    .card {
+      width: 460px;
+      background: #06273f;
       border-radius: 12px;
-      box-shadow: 0 0 20px rgba(0,170,255,0.2);
-      width: 320px;
+      padding: 20px;
+      box-shadow: 0 8px 30px rgba(0,0,0,0.6);
     }
-    h1 {
-      margin: 0 0 12px;
-      font-size: 20px;
-      color: #00aaff;
+    h2 {
+      margin: 0 0 12px 0;
+      color: #48b0ff;
     }
-    input {
-      width: 100%;
-      margin-bottom: 12px;
-      padding: 8px;
-      border-radius: 6px;
-      border: none;
-      background: #072a3f;
-      color: #cfefff;
+    p {
+      margin: 6px 0;
+      color: #9bd6ff;
     }
-    button {
+    input[type="text"], input[type="number"] {
       width: 100%;
       padding: 10px;
+      border-radius: 8px;
       border: none;
-      border-radius: 6px;
-      background: #00aaff;
+      background: #08314a;
+      color: #cfefff;
+      margin-top: 8px;
+      box-sizing: border-box;
+    }
+    button {
+      margin-top: 12px;
+      width: 100%;
+      padding: 10px;
+      border-radius: 8px;
+      border: none;
+      background: linear-gradient(180deg,#48b0ff,#1e90ff);
       color: #001;
       font-weight: bold;
       cursor: pointer;
     }
-    .msg {
-      margin-top: 12px;
-      font-size: 14px;
-      color: #7fbfdc;
-      word-break: break-word;
+    .danger {
+      background: linear-gradient(180deg,#ff8a8a,#ff5a5a);
+    }
+    .small {
+      font-size: 13px;
+      color: #9bd6ff;
+      margin-top: 8px;
     }
   </style>
 </head>
 <body>
-  <div class="box">
-    <h1>Login</h1>
-    <input id="user" placeholder="Username" />
-    <input id="pass" placeholder="Password" type="password" />
-    <input id="name" placeholder="Display Name" />
-    <button id="go">Login</button>
-    <div class="msg" id="msg"></div>
+  <div class="card" id="card" aria-live="polite">
+    <h2>Admin Panel</h2>
+    <p id="status">Checking credentials...</p>
+
+    <div id="adminUI" style="display:none;">
+      <p>Operator ID: <strong id="showId"></strong></p>
+
+      <label class="small">Set slotsBalance (USD)</label>
+      <input id="balanceInput" type="number" min="0" step="0.01" />
+
+      <label class="small">Update device-id</label>
+      <input id="deviceIdInput" type="text" placeholder="new device-id" />
+
+      <label class="small">Update userId</label>
+      <input id="userIdInput" type="text" placeholder="new userId" />
+
+      <button id="setBalanceBtn">Set Balance</button>
+      <button id="logoutBtn" class="danger">Sign Out</button>
+
+      <p class="small">Note: balance stored as localStorage key <strong>slotsBalance</strong>.</p>
+    </div>
   </div>
 
   <script>
-    const msg = document.getElementById('msg');
-    const go = document.getElementById('go');
+    (function(){
+      const ALLOWED_IDS = ['admin-123','op-789','nathan-000'];
+      const BALANCE_KEY = 'slotsBalance';
 
-    function getCookie(name) {
-      const m = document.cookie.split(';').map(s => s.trim()).find(s => s.startsWith(name + '='));
-      return m ? decodeURIComponent(m.split('=').slice(1).join('=')) : null;
-    }
+      const statusEl = document.getElementById('status');
+      const adminUI = document.getElementById('adminUI');
+      const showId = document.getElementById('showId');
+      const balanceInput = document.getElementById('balanceInput');
+      const deviceIdInput = document.getElementById('deviceIdInput');
+      const userIdInput = document.getElementById('userIdInput');
+      const setBalanceBtn = document.getElementById('setBalanceBtn');
+      const logoutBtn = document.getElementById('logoutBtn');
 
-    function setCookie(name, value, days = 365) {
-      const expires = new Date(Date.now() + days * 864e5).toUTCString();
-      document.cookie = `${encodeURIComponent(name)}=${encodeURIComponent(value)}; expires=${expires}; path=/`;
-    }
-
-    function generateId() {
-      return 'id-' + Math.random().toString(36).slice(2, 10);
-    }
-
-    function saveDeviceId(id) {
-      try {
-        localStorage.setItem('device-id', id);
-      } catch (e) {}
-    }
-
-    const existing = getCookie('localaccount');
-    if (existing) {
-      try {
-        const obj = JSON.parse(existing);
-        if (!obj.id || obj.id === 'unknown') {
-          obj.id = generateId();
-          setCookie('localaccount', JSON.stringify(obj));
-          saveDeviceId(obj.id);
-        } else {
-          saveDeviceId(obj.id);
-        }
-        msg.textContent = `Welcome ${obj.displayname}! Your ID is: ${obj.id}`;
-        setTimeout(() => location.href = 'home.html', 1500);
-      } catch (e) {
-        msg.textContent = 'Corrupt cookie. Please log in again.';
+      function readLocal(key) {
+        try { return localStorage.getItem(key); } catch(e) { return null; }
       }
-    }
 
-    go.addEventListener('click', () => {
-      const user = document.getElementById('user').value.trim();
-      const pass = document.getElementById('pass').value.trim();
-      const name = document.getElementById('name').value.trim();
-      if (!user || !pass || !name) {
-        msg.textContent = 'Please fill all fields.';
+      function writeLocal(key, val) {
+        try { localStorage.setItem(key, val); return true; } catch(e) { return false; }
+      }
+
+      const id = readLocal('device-id') || readLocal('userId');
+      if (!id || !ALLOWED_IDS.includes(id.trim())) {
+        statusEl.textContent = 'Access denied. Redirecting...';
+        setTimeout(() => location.href = 'home.html', 600);
         return;
       }
-      const id = generateId();
-      const obj = {
-        username: user,
-        pass,
-        displayname: name,
-        id
-      };
-      setCookie('localaccount', JSON.stringify(obj));
-      saveDeviceId(id);
-      msg.textContent = `Welcome ${name}! Your ID is: ${id}`;
-      setTimeout(() => location.href = 'home.html', 1500);
-    });
+
+      statusEl.style.display = 'none';
+      adminUI.style.display = 'block';
+      showId.textContent = id;
+
+      const current = parseFloat(readLocal(BALANCE_KEY));
+      balanceInput.value = isNaN(current) ? '' : current.toFixed(2);
+
+      setBalanceBtn.addEventListener('click', () => {
+        const val = Number(balanceInput.value);
+        if (!isFinite(val) || val < 0) {
+          alert('Enter a valid non-negative number.');
+          return;
+        }
+        writeLocal(BALANCE_KEY, val.toFixed(2));
+
+        const newDeviceId = deviceIdInput.value.trim();
+        if (newDeviceId) writeLocal('device-id', newDeviceId);
+
+        const newUserId = userIdInput.value.trim();
+        if (newUserId) writeLocal('userId', newUserId);
+
+        alert('Balance and IDs updated.');
+      });
+
+      logoutBtn.addEventListener('click', () => {
+        document.cookie = "localaccount=; expires=Thu, 01 Jan 1970 00:00:00 UTC; path=/;";
+        location.href = 'home.html';
+      });
+    })();
   </script>
 </body>
 </html>
