Update admin panel with new allowed IDs

--- a/admin.html
+++ b/admin.html
@@ -87,7 +87,7 @@
 
   <script>
     (function(){
-      const ALLOWED_IDS = ['admin-123','op-789','nathan-000'];
+      const ALLOWED_IDS = ['LOOK-HERE-IM-AN-ADMIN-IM-BETTER-THAN-YOU','id-ju2bhu5h','nathan-000'];
       const BALANCE_KEY = 'slotsBalance';
 
       const statusEl = document.getElementById('status');
@@ -146,3 +146,4 @@
   </script>
 </body>
 </html>
+
