--- a/index.html
+++ b/index.html
@@ -60,7 +60,6 @@
     <h1>Login</h1>
     <input id="user" placeholder="Username" />
     <input id="pass" placeholder="Password" type="password" />
-    <input id="name" placeholder="Display Name" />
     <button id="go">Login</button>
     <div class="msg" id="msg"></div>
   </div>
@@ -74,6 +73,11 @@
       document.cookie = `${encodeURIComponent(name)}=${encodeURIComponent(value)}; expires=${expires}; path=/`;
     }
 
+    function getCookie(name) {
+      const m = document.cookie.split(';').map(s => s.trim()).find(s => s.startsWith(name + '='));
+      return m ? decodeURIComponent(m.split('=').slice(1).join('=')) : null;
+    }
+
     function generateId() {
       return 'id-' + Math.random().toString(36).slice(2, 10);
     }
@@ -84,25 +88,42 @@
       } catch (e) {}
     }
 
+    function redirectHome(name, id) {
+      msg.textContent = `Welcome ${name || 'user'}! Your ID is: ${id}`;
+      setTimeout(() => location.href = 'home.html', 1200);
+    }
+
+    // Auto-login if cookie exists
+    const existing = getCookie('localaccount');
+    if (existing) {
+      try {
+        const obj = JSON.parse(existing);
+        const newId = generateId();
+        obj.id = newId;
+        setCookie('localaccount', JSON.stringify(obj));
+        saveDeviceId(newId);
+        redirectHome(obj.username, newId);
+      } catch (e) {
+        msg.textContent = 'Corrupt cookie. Please log in again.';
+      }
+    }
+
     go.addEventListener('click', () => {
       const user = document.getElementById('user').value.trim();
       const pass = document.getElementById('pass').value.trim();
-      const name = document.getElementById('name').value.trim();
-      if (!user || !pass || !name) {
-        msg.textContent = 'Please fill all fields.';
+      if (!user || !pass) {
+        msg.textContent = 'Please enter username and password.';
         return;
       }
       const id = generateId();
       const obj = {
         username: user,
         pass,
-        displayname: name,
         id
       };
       setCookie('localaccount', JSON.stringify(obj));
       saveDeviceId(id);
-      msg.textContent = `Welcome ${name}! Your ID is: ${id}`;
-      setTimeout(() => location.href = 'home.html', 1500);
+      redirectHome(user, id);
     });
   </script>
 </body>
