--- a/home.html
+++ b/home.html
@@ -29,6 +29,7 @@
     <p class="lead">Choose a game or page to open:</p>
 
     <div class="grid">
+      <button class="btn" onclick="location.href="
       <button class="btn" onclick="location.href='updates.html'">Updates<span>Latest changes</span></button>
       <button class="btn" onclick="location.href='admin.html'">Admin<span>Operator tools</span></button>
       <button class="btn" onclick="location.href='blackjack.html'">Blackjack<span>Play cards vs dealer</span></button>
@@ -60,3 +61,4 @@
   </script>
 </body>
 </html>
+
