--- a/home.html
+++ b/home.html
@@ -29,8 +29,7 @@
     <p class="lead">Choose a game or page to open:</p>
 
     <div class="grid">
-      <button class="btn" onclick="location.href="
-      <button class="btn" onclick="location.href='updates.html'">Updates<span>Latest changes</span></button>
+      <button class="btn" onclick="location.href='update.html'">Updates<span>Latest changes</span></button>
       <button class="btn" onclick="location.href='admin.html'">Admin<span>Operator tools</span></button>
       <button class="btn" onclick="location.href='blackjack.html'">Blackjack<span>Play cards vs dealer</span></button>
       <button class="btn" onclick="location.href='plinko.html'">Plinko<span>Drop balls and get money</span></button>
@@ -61,4 +60,5 @@
   </script>
 </body>
 </html>
+
 
